--- a/FrontendFoodAnnotation/src/app/csv-model/csv-model.component.html
+++ b/FrontendFoodAnnotation/src/app/csv-model/csv-model.component.html
@@ -1,1 +1,4 @@
-<p>csv-model works!</p>
+<label for="file">File:</label>
+<input type="file" multiple (change)="upload($event)" accept=".png,.jpg" />
+<label for="file">Download:</label>
+<button type="button" class="btn" (click)="download()">Download</button>
