--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-<div style="position: relative;">    
+<div style="position: relative; text-align: center;">    
   <canvas #layer1 id="layer1" 
    style="position: relative;"></canvas>
 </div>
