Added a progress indicator for image upload and the images are now scaled down if they are too big to display.

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -17,8 +17,10 @@
     <button mat-flat-button color="primary" type="button" class="btn" (click)="nextImage()">Nächstes Bild</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="save()">Fertig (CSV herunterladen)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
-    <label for="file">Upload:</label>
-    <input type="file" multiple (change)="upload($event)" accept=".png,.jpg" />
+    <br>
+    <label for="file">Bild-Upload ({{uploadProgress}} hochgeladen):</label>
+    <input type="file" multiple (change)="upload($event)" accept=".png,.jpg"/>
+  
   </div>
 </div>
 
