Added a auto save for csv file with bounding boxes which saves the current boxes to Firebase Storage.

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.css
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.css
@@ -1,7 +1,8 @@
 button {
-    margin: 0 10px;
+    margin: 10px;
 }
 canvas {
-    /*max-width: 80vw;
-    max-height: 80vh;*/
+}
+input.number {
+    width: 50px;
 }
