Images can be (re)loaded from Storage with a button click. Coordinates are exported right for ML Kit CSV file.

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -3,8 +3,9 @@
 <div #div1>
   <div class="row justify-content-md-center mb-4">
     <input [(ngModel)]=subfolder placeholder="Ordner"/>
-    <input [(ngModel)]=filePath placeholder="Path"/>
-    <button mat-flat-button color="primary" type="button" class="btn" (click)="nextImage()">Nächstes Bild</button>
+    <button mat-flat-button color="accent" type="button" class="btn" (click)="loadImagesFromStorage()">Bilder laden</button>
+    <!--<input [(ngModel)]=filePath placeholder="Path"/>-->
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="nextImage()">Nächstes Bild ({{index}}/{{names.length}})</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="save()">Fertig (CSV herunterladen)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="uploadCSVfromMLKIT()">NOT WORKING YET! Laden von CSV-File</button>
