added possibility to save all bounding boxes, without clicking through all of them; started adding the functionality of reading the csv file from firebase (not working yet; CORS error)

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -8,7 +8,8 @@
     <button mat-flat-button color="primary" type="button" class="btn" (click)="nextImage()">Nächstes Bild ({{index}}/{{names.length}})</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="save()">Fertig (CSV herunterladen)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
-    <button mat-flat-button color="primary" type="button" class="btn" (click)="uploadCSVfromMLKIT()">NOT WORKING YET! Laden von CSV-File</button>
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotations()">Laden der CSV-Daten</button>
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="downloadCSVfromMLKIT()">NOT WORKING YET (Download CSV Firebase)</button>
   </div>
 </div>
 
