Fixed problems with uploading a large amount of images. Images are now asynchronously uploaded one after another.

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -56,7 +56,7 @@
 <div #div2>
   <br><br>
   <div class="row justify-content-md-center mb-4">
-    <label for="file">Bild-Upload ({{uploadProgress}}/{{totalUploadFiles}} hochgeladen):</label>
+    <label for="file">Bild-Upload ({{uploadedFiles}}/{{totalUploadFiles}} hochgeladen):</label>
   <input type="file" multiple (change)="upload($event)" accept=".png,.jpg"/>
   </div>
   <div class="row justify-content-md-center mb-4">
