--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -9,9 +9,9 @@
     <button mat-flat-button color="primary" type="button" class="btn" (click)="save()">Fertig (CSV herunterladen)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotations()">Laden der CSV-Daten</button>
-    <button mat-flat-button color="primary" type="button" class="btn" (click)="checkAndDelete()">Bilder Löschen und CSV ML KIT erstellen</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="downLoadImagesByURL()">Laden der Bilder</button>
-    <button mat-flat-button color="primary" type="button" class="btn" (click)="showAnnotations()">NOT WORKING YET (Download CSV Firebase)</button>
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="loadImageSize()">Laden der Bildergröße</button>
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="showTags()">NOT WORKING YET (Download CSV Firebase)</button>
   </div>
 </div>
 
