fixed old csv files not able to convert

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -8,8 +8,8 @@
     <button mat-flat-button color="primary" type="button" class="btn" (click)="nextImage()">Nächstes Bild ({{index}}/{{names.length}})</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="save()">Fertig (CSV herunterladen)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotationsMLKIT()">Laden der CSV-Daten ML KIT</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotations()">Laden der CSV-Daten</button>
-    <button mat-flat-button color="primary" type="button" class="btn" (click)="downLoadImagesByURL()">Laden der Bilder</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="loadImageSize()">Laden der Bildergröße</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="showTags()">NOT WORKING YET (Download CSV Firebase)</button>
   </div>
