--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -10,8 +10,12 @@
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotationsMLKIT()">Laden der CSV-Daten ML KIT</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotations()">Laden der CSV-Daten</button>
-    <button mat-flat-button color="primary" type="button" class="btn" (click)="loadImageSize()">Laden der Bildergröße</button>
-    <button mat-flat-button color="primary" type="button" class="btn" (click)="showTags()">NOT WORKING YET (Download CSV Firebase)</button>
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="checkAndDelete()">Laden der Bildergröße</button>
+    <select [(ngModel)]="selectedTag" (change)="sortImages()">
+      <option value="all">All</option>
+      <option value="noTag">no Tag</option>
+      <option *ngFor="let tag of tagList" value="{{tag.tagName}}">{{tag.tagName}}</option>
+    </select>
   </div>
 </div>
 
