--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.css
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.css
@@ -1,8 +1,11 @@
 button {
-    margin: 10px;
+    margin: 0 10px;
 }
 canvas {
 }
 input.number {
     width: 50px;
+}
+.margintop-10 {
+    margin-top: 10px;
 }
