tried to add autocomplete for tags, not working yet (is commented in html); tags are now sorted

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -5,7 +5,7 @@
     <!--<input [(ngModel)]=filePath placeholder="Path"/>-->
     <button mat-flat-button color="primary" type="button" class="btn" (click)="previousImage()">Vorheriges Bild</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="nextImage()">Nächstes Bild</button>
-    <p>({{index - 1}}/{{annotationsToShow.length}})</p>
+    <p>({{index - 1}}/{{annotationsToShow.length - 1}})</p>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="save()">Speichern als CSV-Datei</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
     <!--<button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotations()">Laden der CSV-Daten</button>-->
@@ -15,6 +15,20 @@
       <option value="noTag">no Tag</option>
       <option *ngFor="let tag of tagList" value="{{tag.tagName}}">{{tag.tagName}}</option>
     </select>
+    <!--div mat-dialog-content>
+      <mat-form-field class="example-full-width">
+        <input matInput type="text"
+               placeholder="Tag auswählen"
+               aria-label="Number"
+               [formControl]="myControl"
+               [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option *ngFor="let option of filteredOptions | async" [value]="option" [mat-dialog-close]="option">
+            {{option}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+    </div-->
   </div>
 </div>
 
