added button to delete images; still a little buggy after deleting, but pressing next/previous button is fixing it

--- a/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
+++ b/FrontendFoodAnnotation/src/app/canvas-for-food/canvas-for-food.component.html
@@ -8,6 +8,7 @@
     <p>({{index - 1}}/{{annotationsToShow.length - 1}})</p>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="save()">Speichern als CSV-Datei</button>
     <button mat-flat-button color="primary" type="button" class="btn" (click)="saveForMLkit()">Exportieren (für ML Kit)</button>
+    <button mat-flat-button color="primary" type="button" class="btn" (click)="deleteImage()">Löschen</button>
     <!--<button mat-flat-button color="primary" type="button" class="btn" (click)="addBoxesToAnnotations()">Laden der CSV-Daten</button>-->
     <!--<button mat-flat-button color="primary" type="button" class="btn" (click)="getTagsForMLKIT()">Laden der Bildergröße</button>-->
     <!--<select [(ngModel)]="selectedTag" (change)="sortImages()">
