--- a/FrontendFoodAnnotation/src/app/tag-selection-dialog/tag-selection-dialog.component.html
+++ b/FrontendFoodAnnotation/src/app/tag-selection-dialog/tag-selection-dialog.component.html
@@ -4,7 +4,7 @@
     <mat-label>Tag</mat-label>
     <input matInput [(ngModel)]="data.tag">
   </mat-form-field>-->
-  <mat-form-field class="example-full-width">
+  <mat-form-field>
     <input matInput type="text"
            placeholder="Tag auswählen"
            aria-label="Number"
